--- a/photo.css
+++ b/photo.css
@@ -65,7 +65,7 @@ header{
     opacity:0.2;
 }
 
-/*.photo-contents*/
+/*photo-contents*/
 .photo-contents{
     background-colo:rgba(68, 108, 230,0.5);
     width:100%;
